<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 Denis Oluka
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/spacing_50"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.ui.transfer.McashWalletFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/spacing_20"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/warning"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/clTopBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_16"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_30"
            android:padding="@dimen/spacing_16"
            app:layout_constraintTop_toBottomOf="@id/clTopBar"
            android:text="@string/this_action_will_delete_all_cached_item_fees_are_you_sure_you_want_to_continue"
            android:textSize="@dimen/font_18" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_30"
            android:layout_marginEnd="@dimen/spacing_30"
            android:layout_marginStart="@dimen/spacing_30"
            app:layout_constraintTop_toBottomOf="@id/mtvMessage">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOkay"
                android:layout_width="0dp"
                style="@style/PrimaryBtnStyle"
                android:text="@string/yes"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/spacing_30"
                app:layout_constraintStart_toEndOf="@+id/guideline"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                style="@style/SecondaryBtnStyle"
                android:text="@string/no"
                android:textColor="?colorSecondary"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="@dimen/spacing_30"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

