<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_8"
    tools:context=".presentation.ui.MainActivity">

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/tilSearch"
       android:layout_width="0dp"
       style="@style/CustomTextInputStyle"
       android:layout_marginTop="@dimen/spacing_16"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toStartOf="@id/guideline"
       android:layout_marginEnd="@dimen/spacing_16">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/etSearch"
           style="@style/DefaultEditTextStyle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/transaction_id"
           android:inputType="number"/>

   </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFind"
        android:layout_width="0dp"
        style="@style/PrimaryBtnStyle"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilSearch"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/tilSearch"
        android:text="@string/find"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        app:cardCornerRadius="@dimen/spacing_8"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_16">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_details"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvIssueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2020-03-30"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvTransactionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Transaction name"
                android:layout_marginTop="@dimen/spacing_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mtvTitleLabel"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/active"
                android:textColor="?colorSecondary"
                android:background="@drawable/et_border_item_bg"
                android:layout_marginTop="@dimen/spacing_8"
                android:paddingTop="@dimen/spacing_5"
                android:paddingBottom="@dimen/spacing_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mtvTransactionName"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clError"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_16"
        app:layout_constraintTop_toBottomOf="@id/tilSearch"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>